name:                hastache-aeson
version:             0.1.0.0
license:             BSD3
Homepage:            https://github.com/proger/hastache-aeson

copyright:           Vladimir Kirillov
author:              Vladimir Kirillov <proger@hackndev.com>
maintainer:          Vladimir Kirillov <proger@hackndev.com>

synopsis:            render aeson values as hastache templates
description:         

category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Text.Hastache.Aeson
  -- other-modules:       
  build-depends:       base ==4.6.*
                     , hastache ==0.5.*
                     , aeson ==0.6.*
                     , attoparsec ==0.10.*
                     , unordered-containers ==0.2.*
                     , vector ==0.10.*
                     , containers ==0.5.*
                     , text ==0.11.*
                     , bytestring ==0.10.*
